prevent user to upload too large or wrong image file #56 #52 #32

--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,3 +1,3 @@
 .information_font{
-    font-size: 20px ;
+    font-size:medium ;
 }
